--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven.build.timestamp.format>yyyy-MM-dd-HH:mm:ss</maven.build.timestamp.format>
+        <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
         <java-version>1.7</java-version>
-                
+
         <org.slf4j-version>1.6.1</org.slf4j-version>
-        
+
         <javax.servlet.version>3.0.1</javax.servlet.version>
         <javax.servlet.jsp.version>2.2</javax.servlet.jsp.version>
+        <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
     </properties>
     <dependencies>
         <dependency>
@@ -29,7 +30,7 @@
                     <groupId>commons-logging</groupId>
                     <artifactId>commons-logging</artifactId>
                  </exclusion>
-            </exclusions>            
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>xml-security</groupId>
@@ -41,26 +42,26 @@
             <artifactId>opensaml</artifactId>
             <version>1.1</version>
         </dependency>
-        
+
         <!-- Servlet related specifications. -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <version>${javax.servlet.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
-            <version>2.2</version>
+            <version>${javax.servlet.jsp.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${javax.servlet.jstl.version}</version>
         </dependency>
-        
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -84,9 +85,19 @@
             <version>1.2.16</version>
             <scope>runtime</scope>
         </dependency>
-        
     </dependencies>
     <build>
         <finalName>casjspdemo</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
