--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>opensaml</artifactId>
+            <version>2.6.5</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>casjspdemo</finalName>
