--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
-            <version>2.6.4</version>
+            <version>2.6.6</version>
         </dependency>
     </dependencies>
     <build>
@@ -99,4 +99,11 @@
             </plugin>
         </plugins>
     </build>
+	<repositories>
+		<repository>
+			<id>shibboleth</id>
+			<name>Shibboleth</name>
+			<url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 </project>
